fix mobile styling
white space on right side of mobile removed with overflowx hidden.

--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,10 @@ html {
   padding: 0;
 }
 
+html, body {
+    overflow-x: hidden;
+}
+
 body {
   font-family: 'Questrial', sans-serif;
   line-height: 1.5;
